fix(stack): improve Elasticsearch remote configuration and update roadmap
- Added operationMode="REMOTE" to baseline OSGi search configs
- Removed hardcoded indexNamePrefix from baseline to allow project-level overrides
- Updated project roadmap with new startup performance optimization strategies
- Bumps version to 1.9.5